feat: support global enum
